--- a/src/server/appsettings.json
+++ b/src/server/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "gpt35-deployment-name": "gpt35Deployment",
-  "gpt40-deployment-name": "gpt4ChatDeployment"
+  "gpt35-deployment-name": "",
+  "gpt40-deployment-name": ""
 } 
