--- a/src/server/appsettings.json
+++ b/src/server/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "gpt35-deployment-name": "gpt-3.5-turbo-0125",
-  "gpt40-deployment-name": "gpt-4o"
+  "gpt35-deployment-name": "",
+  "gpt40-deployment-name": ""
 } 
