--- a/src/server/sdlc-toolkit-api.csproj
+++ b/src/server/sdlc-toolkit-api.csproj
@@ -7,6 +7,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <UserSecretsId>1df546c0-949c-46b9-9742-39f9cfd090d8</UserSecretsId>
+        <RootNamespace>Toolkit</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
